// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transactions module works: signedOut 1`] = `<div />`;

exports[`transactions module works: signedin.idle 1`] = `
<div>
  logged In
</div>
`;

exports[`transactions module works: signedin.idle 2`] = `
<div>
  <button
    onClick={[Function]}
    type="button"
  >
    x
  </button>
  logged In
</div>
`;
